--- a/Lunar_Lander_Genetic_Algorithm copy.ipynb
+++ b/Lunar_Lander_Genetic_Algorithm copy.ipynb
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-11-07T08:27:21.613329Z",
@@ -516,14 +516,23 @@
     },
     "trusted": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'rm' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
-    "# !rm -r /kaggle/working/saved_model"
+    "!rm -r /kaggle/working/saved_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -551,7 +560,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_18344\\1785871960.py:23: RuntimeWarning: invalid value encountered in divide\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_18344\\3110704024.py:22: RuntimeWarning: invalid value encountered in divide\n",
       "  fitness=(fitness-np.mean(fitness))/(np.std(fitness))\n"
      ]
     },
@@ -562,11 +571,11 @@
       "-------------------------------------------------------------------------------\n",
       "Generation 1\n",
       "-------------------------------------------------------------------------------\n",
-      "Current best fitness:-369.04738097379885,                         \n",
-      "Fitness mean:-369.04738097379885,\n",
+      "Current best fitness:-412.7172091041462,                         \n",
+      "Fitness mean:-412.7172091041462,\n",
       "Fitness std:0.0,                         \n",
-      "All-time best fitness:-324.87613816465.\n",
-      "Elapsed Time:0h:0m:5s, Estimated to completion:0h,0m, 0s\n",
+      "All-time best fitness:-245.63283023079052.\n",
+      "Elapsed Time:0h:0m:7s, Estimated to completion:0h,0m, 0s\n",
       "Temperature for Boltzmann selection 2.958698113480078\n",
       "Model saved\n",
       "Model saved\n"
@@ -587,7 +596,7 @@
     "        create_policy_eval_video(model, env, save_path+'/videos/'+str(n_gen), num_episodes=5)\n",
     "        print('')\n",
     "\n",
-    "save_path='/kaggle/working/'\n",
+    "save_path=''\n",
     "\n",
     "if os.path.exists(save_path+'/saved_model'):\n",
     "    unused, model=generate_initial_pop(1)\n",
