Videos and images added

--- a/PPO/Proximal Policy Optimization (PPO) [LunarLander].ipynb
+++ b/PPO/Proximal Policy Optimization (PPO) [LunarLander].ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        ")"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,6 +1125,72 @@
    ],
    "source": [
     "plt.plot(history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_20412\\2882276144.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  policy = torch.load(\"policy_complete.pth\")\n",
+      "IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (600, 400) to (608, 400) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to 1 (risking incompatibility).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode reward: 201.30444738383352 Number of frames: 467\n",
+      "Episode reward: 238.872923703065 Number of frames: 489\n",
+      "Episode reward: 218.061052501641 Number of frames: 479\n",
+      "Episode reward: 221.49202002352922 Number of frames: 497\n",
+      "Episode reward: 227.00680182577793 Number of frames: 492\n",
+      "Video saved to './videos'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import imageio \n",
+    "policy = torch.load(\"policy_complete.pth\")\n",
+    "policy.eval()\n",
+    "env = gym.make(\"LunarLander-v3\", render_mode=\"rgb_array\")\n",
+    "# env = RecordVideo(env, video_folder=\"./videos\", name_prefix=\"lunar_lander_test_3\")\n",
+    "\n",
+    "rews=[]\n",
+    "frames=[]\n",
+    "success_count = 0\n",
+    "filename = \"ppo.mp4\"\n",
+    "with imageio.get_writer(filename, fps=30) as video:\n",
+    "    for _ in range(5):\n",
+    "      state, _ = env.reset()\n",
+    "      total = 0\n",
+    "      done = False\n",
+    "      frame = 0\n",
+    "      history = []\n",
+    "      reward=0\n",
+    "      frame_counter=0\n",
+    "      while not done:\n",
+    "        \n",
+    "        state_tensor = torch.tensor(state, dtype=torch.float32).unsqueeze(0)\n",
+    "        frame += 1\n",
+    "        action_probs = policy.actor(state_tensor)\n",
+    "        action = torch.argmax(action_probs, dim=1).item()  # Select the action with the highest probability\n",
+    "        state, rew, done, _, _ = env.step(action)\n",
+    "        # print(action[0])\n",
+    "        # state, rew, done, _, _ = env.step(action.item())\n",
+    "        # obs = np.expand_dims(np.asarray(obs), axis=0)\n",
+    "        reward+=rew\n",
+    "        video.append_data(env.render())\n",
+    "        frame_counter+=1\n",
+    "      print('Episode reward:', reward, 'Number of frames:', frame_counter)\n",
+    "env.close()\n",
+    "\n",
+    "print(\"Video saved to './videos'\")"
    ]
   },
   {
